// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replay ADDED_TODO event can add todos as children of children 1`] = `
Array [
  Object {
    "title": "Create a parent todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "parentId": "id-3",
            "title": "Create a child todo of child of parent 2",
            "todoId": "id-5",
          },
          Object {
            "children": Array [
              Object {
                "parentId": "id-6",
                "title": "Create a child of 2nd child of child of parent 2",
                "todoId": "id-7",
              },
            ],
            "parentId": "id-3",
            "title": "Create a second child todo of child of parent 2",
            "todoId": "id-6",
          },
        ],
        "parentId": "id-2",
        "title": "Create a child in another parent todo",
        "todoId": "id-3",
      },
    ],
    "title": "Create another parent todo",
    "todoId": "id-2",
  },
  Object {
    "title": "Create a third parent todo",
    "todoId": "id-4",
  },
]
`;

exports[`replay ADDED_TODO event can add todos in a more complex example 1`] = `
Array [
  Object {
    "title": "Create a parent todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [
      Object {
        "parentId": "id-2",
        "title": "Create a child in another parent todo",
        "todoId": "id-3",
      },
      Object {
        "parentId": "id-2",
        "title": "Create another child todo in parent 2",
        "todoId": "id-5",
      },
    ],
    "title": "Create another parent todo",
    "todoId": "id-2",
  },
  Object {
    "title": "Create a third parent todo",
    "todoId": "id-4",
  },
]
`;

exports[`replay editing todos CHANGED_TODO can edit child todos 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "parentId": "id-1",
        "title": "Changed title of child",
        "todoId": "id-2",
      },
    ],
    "title": "Create a todo",
    "todoId": "id-1",
  },
]
`;

exports[`replay editing todos CHANGED_TODO only edits the things provided in data and does not touch other fields 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "parentId": "id-1",
        "title": "Changed title of child but did not change parentId",
        "todoId": "id-2",
      },
    ],
    "title": "Create a todo",
    "todoId": "id-1",
  },
]
`;

exports[`replay editing todos CHANGED_TODO will change the todos when the edit is done 1`] = `
Object {
  "title": "Changed the todo",
  "todoId": "id-1",
}
`;

exports[`replay editing todos EDITING_TODO does not care in the store about intermediate edits 1`] = `
Object {
  "title": "Create a todo",
  "todoId": "id-1",
}
`;
